# alexandria

./: .clang-format  CMakeLists.txt  README.md  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md
include/: ascii_string.h  asserts.h  bit_manip.h  concepts.h  file_input.h  numeric_limits.h  optional.h  type_aliases.h  type_traits.h  unique_ptr.h  utility.h
src/: ascii_string.cpp  file_input.cpp  global_mem.cpp
test/: ascii_string.cpp  asserts.cpp  bit_manip.cpp  file_input.cpp  optional.cpp  type_aliases.cpp  type_traits.cpp  unique_ptr.cpp  utility.cpp
